classDiagram
    SaleableItem <|.. Product
    Serializable <|.. Product

    Product <|-- Ticket
    Product <|-- Publication
    Product <|-- GameConsole

    Publication <|-- Book
    Publication <|-- Magazine
    Magazine <|-- DiscMag

    GameConsole <|-- HandheldConsole
    GameConsole <|-- HomeConsole

    Product "many" -- "many" Cart

    class Product{
        -Long Id
        -Set~Cart~ carts
        +getId()
        +setId()
        +getCarts()
        +setCarts()
        +equals()
        +hashCode()
        +toString()
    }

    class Cart{
        -Long id
        -Set~Product~ products

        +Cart()
        +Cart(Set~Product~ products)

        +addProduct()
        +getId()
        +setId()
        +getProducts()
        +setProducts()
        +equals()
        +hashCode()
        +toString()
    }

    class Ticket{
        +String description
        +double price
        +sellItem()
        +getDescription()
        +setDescription()
        +getPrice()
        +setPrice()
        +equals()
        +hashCode()
        +toString()
    }

    class Publication{
        <<Abstract>>
        -String title
        -double price
        -int copies
        +getPrice()
        +setPrice()
        +Publication()
        +Publication(String title, double price, int copies)
        +equals()
        +hashCode()
        +toString()
    }

    class Book{
        -String author
        +edit()
        +initialize()
        +sellItem()
        +Book()
        +Book(String author)
        +Book(String author, String title, double price, int copies)
        +equals()
        +hashCode()
        +toString()
    }

    class Magazine{
        -int orderQty
        -java.util.Date currentIssue

        +Magazine()
        +Magazine(int orderQty, Date currentIssue, String title, double price, int copies)

        +edit()
        +initialize()
        +sellItem()
        +equals()
        +hashCode()
        +toString()
    }

    class DiscMag{
        -boolean hasDisc
        +edit()
        +initialize()
        +sellItem()

        +DiscMag()
        +DiscMag(boolean, hasDisc, int orderQty, Date currentIssue, String title, double price, int copies)

        +equals()
        +hashCode()
        +toString()
    }

    class GameConsole {
        <<abstract>>
        -String manufacturer
        -double price
        -int quantity

        +GameConsole()
        +GameConsole(String manufacturer, double price, int quantity)

        +getManufacturer()
        +setManufacturer()
        +getPrice()
        +setPrice()
        +getQuantity()
        +setQuantity()
        +equals()
        +hashCode()
        +toString()
    }

    class HandheldConsole {
        -int batteryLifeHours

        +HandheldConsole()
        +HandheldConsole(String manufacturer, double price, int quantity, int batteryLifeHours)

        +getbatteryLifeHours()
        +setbatteryLifeHours()
        +equals()
        +hashCode()
        +toString()
    }

    class HomeConsole {
        -String maxResolution

        +HomeConsole()
        +HomeConsole(String manufacturer, double price, int quantity, String maxResolution)

        +getMaxResolution()
        +setMaxResolution()
        +equals()
        +hashCode()
        +toString()
    }

    class SaleableItem {
        <<interface>>
        +sellItem()
        +getPrice()
    }

    class Serializable{
        <<interface>>
    }
